--- a/modules/boletim-web/src/main/resources/tarefa/entry_search_table.jspf
+++ b/modules/boletim-web/src/main/resources/tarefa/entry_search_table.jspf
@@ -1,7 +1,7 @@
-<%-- Generate tarefa view  URL. --%>
+<%-- Generate tarefa view URL. --%>
 
 <portlet:renderURL var="viewAssignmentURL">
-	<portlet:param name="mvcRenderCommandName" value="<%=MVCCommandNames.VIEW_ASSIGNMENT %>" />
+	<portlet:param name="mvcRenderCommandName" value="<%= MVCCommandNames.VIEW_ASSIGNMENT %>" />
 	<portlet:param name="redirect" value="${currentURL}" />
 	<portlet:param name="assignmentId" value="${entry.assignmentId}" />
 </portlet:renderURL>
@@ -11,28 +11,32 @@
 	<%-- Descriptive (list) view --%>
 
 	<c:when
-		test='${assignmentsManagementToolbarDisplayContext.getDisplayStyle().equals("descriptive")}'>
+		test='${assignmentsManagementToolbarDisplayContext.getDisplayStyle().equals("descriptive")}'
+	>
 
 		<%-- User --%>
 
 		<liferay-ui:search-container-column-user
-			showDetails="<%=false%>"
-			userId="<%=entry.getUserId()%>"
+			showDetails="<%= false %>"
+			userId="<%= entry.getUserId() %>"
 		/>
 
-		<liferay-ui:search-container-column-text colspan="<%=2%>">
+		<liferay-ui:search-container-column-text colspan="<%= 2 %>">
 
 			<%
-				String modifiedDateDescription =
-					LanguageUtil.getTimeDescription(
-							request, System.currentTimeMillis()
-							- entry.getModifiedDate().getTime(), true);
+			String modifiedDateDescription = LanguageUtil.getTimeDescription(
+				request,
+				System.currentTimeMillis() -
+					entry.getModifiedDate(
+					).getTime(),
+				true);
 			%>
 
 			<h5 class="text-default">
 				<liferay-ui:message
-					arguments="<%=new String[] {entry.getUserName(), modifiedDateDescription}%>"
-					key="x-modified-x-ago" />
+					arguments="<%= new String[] {entry.getUserName(), modifiedDateDescription} %>"
+					key="x-modified-x-ago"
+				/>
 			</h5>
 
 			<h4>
@@ -40,17 +44,18 @@
 					${entry.title}
 				</aui:a>
 			</h4>
-
 		</liferay-ui:search-container-column-text>
 
 		<liferay-ui:search-container-column-jsp
-			path="/tarefa/entry_actions.jsp" />
+			path="/tarefa/entry_actions.jsp"
+		/>
 	</c:when>
 
-	<%-- Card view  --%>
+	<%-- Card view --%>
 
 	<c:when
-		test='${assignmentsManagementToolbarDisplayContext.getDisplayStyle().equals("icon")}'>
+		test='${assignmentsManagementToolbarDisplayContext.getDisplayStyle().equals("icon")}'
+	>
 
 		<%--
 			row.setCssClass("lfr-asset-item");
@@ -63,12 +68,12 @@
 			<liferay-frontend:icon-vertical-card
 				actionJsp="/tarefa/entry_actions.jsp"
 				actionJspServletContext="<%= application %>"
-				icon="cards2" resultRow="${row}"
+				icon="cards2"
+				resultRow="${row}"
 				title="${entry.title}"
-				url="${viewAssignmentURL}">
-
+				url="${viewAssignmentURL}"
+			>
 				<liferay-frontend:vertical-card-sticker-bottom>
-
 					<liferay-ui:user-portrait
 						cssClass="sticker sticker-bottom"
 						userId="${entry.userId}"
@@ -76,13 +81,12 @@
 				</liferay-frontend:vertical-card-sticker-bottom>
 
 				<liferay-frontend:vertical-card-footer>
+					<div class="truncate-text">
 
-				  	<div class="truncate-text">
+						<%-- Strip HTML --%>
 
-				  		<%-- Strip HTML --%>
-
-				  		<%=HtmlUtil.stripHtml(entry.getDescription()) %>
-				  	</div>
+						<%= HtmlUtil.stripHtml(entry.getDescription()) %>
+					</div>
 				</liferay-frontend:vertical-card-footer>
 			</liferay-frontend:icon-vertical-card>
 		</liferay-ui:search-container-column-text>
@@ -91,7 +95,6 @@
 	<%-- Table view --%>
 
 	<c:otherwise>
-
 		<liferay-ui:search-container-column-text
 			href="${viewAssignmentURL}"
 			name="title"
